--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--FontAwesome CDN-->
+    <script
+      src="https://kit.fontawesome.com/202d139087.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="styles/main.css" />
     <title>Fitness</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!--Navbar part Code Here-->
+    <nav>
+      <div class="logo">
+        <h3>Fitness</h3>
+      </div>
+      <div class="nav-menu">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Service</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">About</a></li>
+        </ul>
+      </div>
+      <div class="menu-bar">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+    </nav>
+  </body>
 </html>
