--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
     <title>Fitness</title>
   </head>
   <body>
-    <!--Navbar part Code Here-->
-    <nav>
-      <div class="logo">
-        <h3>Fitness</h3>
-      </div>
-      <div class="nav-menu">
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Service</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">About</a></li>
-        </ul>
-      </div>
-      <div class="menu-bar">
-        <i class="fa-solid fa-bars"></i>
-      </div>
-    </nav>
+    <header>
+      <!--Navbar part Code Here-->
+      <nav>
+        <div class="logo">
+          <h3>Fitness</h3>
+        </div>
+        <div class="nav-menu">
+          <ul>
+            <li><a href=""><span>Home</span></a></li>
+            <li><a href="">Service</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">About</a></li>
+          </ul>
+        </div>
+        <div class="menu-bar">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </nav>
+    </header>
   </body>
 </html>
