--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
         <div class="nav-menu">
           <ul>
-            <li><a href=""><span>Home</span></a></li>
+            <li>
+              <a href=""><span id="home">Home</span></a>
+            </li>
             <li><a href="">Service</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="">About</a></li>
@@ -31,5 +33,7 @@
         </div>
       </nav>
     </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
