bannaer section card update

--- a/index.html
+++ b/index.html
@@ -32,6 +32,38 @@
           <i class="fa-solid fa-bars"></i>
         </div>
       </nav>
+      <!--Bannar section-->
+      <section class="bannar">
+        <div class="bannar-container">
+          <h3 class="bannar-heading">
+            Get body in <br />
+            <span id="shape">shape</span> & stay <br />
+            healthy
+          </h3>
+          <p class="bannar-description">
+            A huge selection of health and fitness content, healthy recipes and
+            transformation stories to help you get fit and stay fit!
+          </p>
+          <button class="btn-primary">Join Club Now!</button>
+          <button class="btn-download">Download App</button>
+        </div>
+        <div class="bannar-pic">
+          <div class="card1">
+            <h3 class="card1-heading">500+</h3>
+            <p class="card1-description">Free Workout Videos</p>
+          </div>
+          <img src="images/bannar.png" alt="" />
+          <div class="card2">
+            <div class="circle">
+              <i class="fa-solid fa-play"></i>
+            </div>
+            <div class="card2-container">
+              <h3 class="card2-heading">350+</h3>
+              <p class="card2-description">Video tutorial</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
