--- a/index.html
+++ b/index.html
@@ -44,15 +44,21 @@
             A huge selection of health and fitness content, healthy recipes and
             transformation stories to help you get fit and stay fit!
           </p>
-          <button class="btn-primary">Join Club Now!</button>
+          <div class="bannar-btn">
+            <button class="btn-primary">Join Club Now!</button>
           <button class="btn-download">Download App</button>
+          </div>
         </div>
         <div class="bannar-pic">
+          <img class="bannar-image" src="images/bannar.png" alt="" />
           <div class="card1">
+          <div class="card1-container">
             <h3 class="card1-heading">500+</h3>
             <p class="card1-description">Free Workout Videos</p>
           </div>
-          <img src="images/bannar.png" alt="" />
+          </div>
+          
+
           <div class="card2">
             <div class="circle">
               <i class="fa-solid fa-play"></i>
