--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      
+    </main>
     <footer></footer>
   </body>
 </html>
