change your habit section add

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
       </section>
     </header>
     <main>
-      
+      <section>
+        <!--Change your Habit section-->
+        
+      </section>
+
     </main>
     <footer></footer>
   </body>
