change habit section responsive

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
   </header>
   <main>
-    <section>
+    <section class="change-habit-container">
       <!--Change your Habit section-->
       <div class="change-habit-container">
         <div class="change-habit">
@@ -87,22 +87,22 @@
           <div class="card">
             <img src="images/image 3.png" alt="" />
             <h5>Movement</h5>
-            <p class="description">We believe fitness should be accessible to everyone</p>
+            <p class="description">Boost flexibility and strength with dynamic exercises.</p>
           </div>
           <div class="card">
             <img src="images/image 2.png" alt="" />
             <h5>Time</h5>
-            <p class="description">We believe fitness should be accessible to everyone</p>
+            <p class="description">Quick workouts for busy schedules.</p>
           </div>
           <div class="card">
             <img src="images/image 4.png" alt="" />
             <h5>Practice</h5>
-            <p class="description">We believe fitness should be accessible to everyone</p>
+            <p class="description">Refine your skills and perfect your technique.</p>
           </div>
           <div class="card">
             <img src="images/image 5.png" alt="" />
             <h5>Weight Loss</h5>
-            <p class="description">We believe fitness should be accessible to everyone</p>
+            <p class="description">Effective plans to help you shed pounds.</p>
           </div>
         
       </div>
