Run extra section responsive

--- a/index.html
+++ b/index.html
@@ -109,7 +109,20 @@
       </div>
     </section>
     <!--Run an Extra Mile Easily section-->
-    <section>
+    <section class="run-extra-section">
+      <div class="run-extra">
+        <div class="run-extra-container">
+          <h3 class="heading">Run an Extra 
+            Mile Easily</h3>
+            <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            <button class="btn-primary">Join Now</button>
+
+        </div>
+        <div class="run-extra-img">
+          <img src="" alt="">
+
+        </div>
+      </div>
       
     </section>
   </main>
