--- a/index.html
+++ b/index.html
@@ -125,6 +125,50 @@
       </div>
       
     </section>
+    <!--BMI calculator-->
+    <section>
+     <div class="bmi-heading">
+      <h3 class="heading">BMI Calculator</h3>
+      <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+     </div>
+    </section>
+    <!--BMI calculator container-->
+    <section class="bmi-get-input">
+      <div class="bmi-calculator-container">
+        <div class="bmi-chart">
+          <h4>BMI Calculator Chart</h4>
+          <table>
+            <thead>
+              <th>BMI</th>
+              <th>Weight status</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Below 18.5</td>
+                <td>Underweight</td>
+              </tr>
+              <tr>
+                <td>18.5 - 24.9</td>
+                <td>Healthy</td>
+              </tr>
+              <tr>
+                <td>25.0 - 29.9</td>
+                <td>Overweight</td>
+              </tr>
+              <tr>
+                <td>30.0 - and Above</td>
+                <td>Obese</td>
+              </tr>
+            </tbody>
+          </table>
+
+        </div>
+        <div class="bmi-imput">
+
+        </div>
+
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
