--- a/index.html
+++ b/index.html
@@ -163,7 +163,26 @@
           </table>
 
         </div>
-        <div class="bmi-imput">
+        <div class="bmi-imput-container">
+          <h4>Calculate your BMI</h4>
+          <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+          <div class="bmi-input">
+            <input type="text" placeholder="Height/cm">
+            <input type="text" placeholder="Weight/kg">
+            <input type="text" placeholder="Age">
+            <select name="" id="">
+              <option value="">Sex</option>
+              <option value="">Male</option>
+              <option value="">Female</option>
+            </select>
+            <select name="" id="">
+              <option value="">Select an activity factor</option>
+            </select>
+          </div>
+          <div>
+            <button class="btn-primary">Calculate</button>
+          </div>
+
 
         </div>
 
