Footer section add

--- a/index.html
+++ b/index.html
@@ -247,8 +247,39 @@
 
       </div>
     </section>
+    <!--Advanced task section for Bonuse part-->
+    <section class="muscle">
+      <div class="muscle-heading">
+        <h3 class="heading">Increase Your Muscle Power</h3>
+        <p class="description">Boost muscle power with strength training, explosive exercises, proper nutrition, and
+          rest.</p>
+      </div>
+      <div class="muscle-container">
+        <div class="muscle-img">
+          <img src="images/muscle.jpg" alt="">
+        </div>
+        <div class="muscle-content">
+          <ul>
+            <li>Strength Training</li>
+            <li>Explosive Movements</li>
+            <li>Nutrition</li>
+            <li>Rest</li>
+            <li>Progressive Overload</li>
+          </ul>
+        </div>
+        <button class="btn-primary">Join With Us</button>
+      </div>
+    </section>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="footer-content">
+
+    </div>
+    <div class="all-rights">
+      
+    </div>
+
+  </footer>
 </body>
 
 </html>
