--- a/index.html
+++ b/index.html
@@ -273,10 +273,31 @@
   </main>
   <footer>
     <div class="footer-content">
+      <div>
+        <h3 class="logo">Fitness</h3>
+        <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts. </p>
+      </div>
+      <div class="get-start-service">
+        <h6 class="heading">Get Started</h6>
+        <p>Service</p>
+        <p>Contact Us</p>
+        <p>Affiliate Program</p>
+        <p>About Us</p>
+      </div>
+      <div class="get-start-fitness">
+        <h6 class="heading">Get Started</h6>
+        <p>Fitness</p>
+        <p>Platform</p>
+        <p>Workout Libary</p>
+        <p>App Design</p>
+      </div>
+
 
     </div>
+    <hr id="footer-line">
     <div class="all-rights">
-      
+      <p>All right reserved @Fitness 2024</p>
+
     </div>
 
   </footer>
